# amonzi

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
src/amonzi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/client/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  template.env  tsconfig.app.json  tsconfig.app.tsbuildinfo
src/client/src/: App.test.tsx  App.tsx  api.ts  firebase.ts  index.css  types.ts
src/server/: db.sqlite3
src/server/apps/marketplace/: admin.py  models.py  serializers.py  urls.py  views.py
src/server/apps/marketplace/migrations/: 0001_initial.py  0002_member_email_defaults.py  0003_listing_engagement_and_more_reviews.py  0004_listing_photo_gallery.py  0005_listing_image_url_text.py  0006_member_wallet_balance.py
src/server/backend/: settings.py  urls.py
src/server/tests/: test_health.py
